# cortex-m-base

./: .gitignore  .gitmodules  CMakeLists.txt  LinkerScript.ld  jlink.jdebug
app/: CMakeLists.txt  command_line.hpp  main.cpp  usb_serial.cpp  usb_serial.hpp
cmake/toolchains/: arm-eabi-none-gcc.cmake
lib/: CMakeLists.txt
lib/MAX31855/: CMakeLists.txt  MAX31855.c  MAX31855.h
lib/SSD1306/: SSD1306.cpp  SSD1306.h  fonts.h
lib/peripheral_drivers/: CMakeLists.txt
lib/peripheral_drivers/inc/: gpio.hpp  volatile_op.hpp
lib/peripheral_drivers/portable/st/f0/: gpio.cpp  gpio_config.hpp
lib/peripheral_drivers/src/: gpio.cpp
lib/peripheral_drivers/test/: CMakeLists.txt  gpio_test.cpp
lib/peripheral_drivers/test/mocks/: CMakeLists.txt  stm32f0xx.h
src/: CMakeLists.txt  startup_stm32f042x6.s
